--- a/css/estilo.css
+++ b/css/estilo.css
@@ -89,9 +89,8 @@ h1, h2, h3 {
 
 .card-body {
   text-align: center;
-  display: flex;
-  flex-direction: column;
-  width: 100%; }
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)); }
 
 p {
   font-family: 'Oswald', sans-serif;
@@ -358,22 +357,26 @@ img {
 /* Servicio*/
 @media screen and (max-width: 320px) {
   .servicio {
-    display: flex;
+    display: grid;
     flex-direction: column; }
   .icono img {
     height: 35vh;
     width: 55vh; } }
 
 /* Registro*/
-@media screen and (min-width: 320px) {
+@media all and (min-width: 320px) {
   .form {
-    width: 90%; }
+    width: 90%;
+    height: 70%;
+    padding: 10px; }
   .aref a {
-    font-size: 1.1rem; } }
+    font-size: 1.1rem;
+    padding-top: 0px;
+    margin-top: 0px; } }
 
-@media screen and (max-width: 1024px) {
+@media screen and (min-width: 1024px) {
   .form {
-    width: 90%; }
+    width: 50%; }
   .aref {
-    padding-top: 60px;
-    margin-top: 60px; } }
+    padding-top: 20px;
+    margin-top: 20px; } }
