--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -83,9 +83,10 @@
   
   .card-body {
     text-align: center;
-    display: flex;
-    flex-direction: column;
-    width: 100%;
+    display: grid; 
+    grid-template-columns: repeat(
+      auto-fit, minmax(150px,1fr)
+    );
   }
   
   p {
