--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -22,7 +22,7 @@
 /* Servicio*/
     @media screen and (max-width: 320px) {
     .servicio {
-    display: flex;
+    display: grid;
     flex-direction: column;
           }
     .icono img {
@@ -32,23 +32,27 @@
   }  
 
 /* Registro*/
-  @media screen and (min-width: 320px) {
+  @media all and (min-width: 320px) {
     .form {
       width: 90%;
+      height: 70%;
+      padding: 10px;
     }
   
     .aref a {
       font-size: 1.1rem;
+      padding-top: 0px;
+      margin-top: 0px;
     }
   }
     
-  @media screen and (max-width: 1024px) {
-    .form {
-      width: 90%;
-    }
+   @media screen and (min-width: 1024px) {
+     .form {
+       width: 50%;
+     }
   
-    .aref {
-      padding-top: 60px;
-      margin-top: 60px;
-    }
-  }
+     .aref {
+      padding-top: 20px;
+      margin-top: 20px;
+     }
+   }
